[package]
name = "mehl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
im = "15.0.0"
itertools = { version = "0.10.0" }
lspower = "1.1.0"
nom = "5.0.0"
simplelog = "0.10.0"
tokio = { version = "1.9.0", features = ["full"] }
tokio-util = "0.6.7"
