[package]
name = "mehl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
im = "15.0.0"
itertools = { version = "0.10.0" }
log = "0.4.14"
lspower = "1.1.0"
nom = "5.0.0"
simplelog = "0.10.0"
structopt = "0.3.25"
tokio = { version = "1.9.0", features = ["full"] }
tokio-util = "0.6.7"
rand = "0.8.4"
